--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*
-    Name: 
+    Name: Deeya Patel
 */
 
 :root{
@@ -73,7 +73,10 @@ header{
     background-position: right;
     background-size: contain;
     /* Styles were added here to arrange the content, I used flexbox */
-    /* TO DO */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 }
 
 /* For All Headings */
@@ -136,7 +139,9 @@ nav ul{
     list-style-type: none;
     padding: 0;
     /* Styles were added here to arrange the content, I used flexbox */
-    /* TO DO */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav a{
@@ -164,7 +169,8 @@ nav a span{
     display: block;
     position: relative;
     /* Styles were added here to arrange the content, I used top and z-index for this */
-    /* TO DO */
+    top: -60px;
+    z-index: 1;
 }
 
 nav a:focus{
@@ -223,17 +229,26 @@ p{
     background-color: var(--wht);
     padding: 96px 32px;
     /* Styles were added here to arrange the content, I used grid */
-    /* TO DO */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto auto;
+    gap: 64px;
 }
 
 #plants h3, #plants > p{
     /* Styles were added here to arrange the content, these are grid children styles */
-    /* TO DO */
+grid-column: 1 / -1;
+text-align: center;
+margin: 0 auto;
+
 }
 
 #plants section{
     /* Styles were added here to arrange the content, I used flexbox */
-    /* TO DO */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;   
     margin: 32px auto 0;
 }
 
@@ -243,7 +258,7 @@ p{
 
 #plants img{
     /* Styles were added here to arrange the content, I used a property for a flexbox child to change the order that the content appears on the page */
-    /* TO DO */
+    order: -1;
     width: 100%;
     max-width: 400px;
     height: auto;
@@ -264,13 +279,15 @@ p{
     color: var(--wht);
     padding: 64px 32px;
     /* Styles were added here to arrange the content, I used grid */
-    /* TO DO */
-}
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 48px;}
 
 /* Contact Heading and Paragraph */
 #contact h3, #contact > p{
     /* Styles were added here to arrange the content, these are grid children styles */
-    /* TO DO */
+    grid-column: 1 / -1;
+    text-align: center;
 }
 
 /* Contact text color */
@@ -288,6 +305,13 @@ p{
     margin-top: 32px;
 }
 
+#contact > div {
+    grid-column: 1;
+}
+
+#contact > section {
+    grid-column: 2;
+}
 #contact div h4, #contact div caption, #contact #social h4{
     margin-top: 48px;
 }
@@ -356,7 +380,9 @@ th:nth-of-type(even), td:nth-of-type(even){
 /* Social Media List */
 #social ul{
     /* Styles were added here to arrange the content, I used grid */
-    /* TO DO */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
     width: fit-content;
     margin: 16px auto;
     list-style-type: none;
@@ -366,7 +392,8 @@ th:nth-of-type(even), td:nth-of-type(even){
 /* Heading for Social Media Section */
 #social h4{
     /* Styles were added here to arrange the content, these are grid children styles */
-    /* TO DO */
+grid-column: 1 / -1;
+text-align: center;
 }
 
 #social a{
