--- a/styles.css
+++ b/styles.css
@@ -238,8 +238,8 @@ p{
 #plants h3, #plants > p{
     /* Styles were added here to arrange the content, these are grid children styles */
 grid-column: 1 / -1;
-text-align: center;
-margin: 0 auto;
+text-align: left;
+margin: 0;
 
 }
 
@@ -247,8 +247,8 @@ margin: 0 auto;
     /* Styles were added here to arrange the content, I used flexbox */
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;   
+    align-items: align-item;
+    text-align: left;   
     margin: 32px auto 0;
 }
 
